Changes specific to mutt-ng:

2005-07-24:
  * restoring xterm's title is possible (with some shell magic, see manual)

2005-07-17:
  * changed safe_strlen and safe_strcmp to mutt_* pendants

2005-07-16:
  * the 'prepare' script has been renamed to 'autogen.sh'

2005-06-29:
  * merge in latest mutt changes so that now it's possible to have a
    different login name for IMAP than local user name

2005-06-16:
  * many consistency changes (which may also complicate migration) (see
    UPGRADING and update-config.pl in contrib/)

2005-05-25:
  * dropped version number and changed to devel

2005-05-14:
  * header caching update: support for qdbm (which supports compressed
    database files) has been added

2005-04-18:
  * sidebar updates: eventually counting can be disabled and
    $sidebar_newmail_only works way better

2005-04-18 (up to):
  * Re-design, re-organization and cleanup still in progress

2005-03-13:
  * Merged in latest mutt changes up to 1.5.9

2005-03-10:
  * included CD's ifdef patch plus extension ('ifndef', feature_*), see manual

2005-03-05:
  * added color sidebar

2005-03-02:
  * support for news servers without LISTGROUP (fixes bug #3483)

2005-03-01:
  * made internal buffy list sorted (-> sorted in sidebar, too)
  * somewhat bigger documentation update; introduce UPGRADING document
  * fixed escape sequence problem in manual.txt
  * fixed bug #3490
  * added an option to make f=f messages break at a certain column

2005-02-27:
  * integrated patch to highlight the next mailbox which includes new mail in sidebar
  * makes sidebar fit into screen in the pager
  * improved usenet usability (pattern '~*' as real name filter, more address parsing)
  * added color for flagged mailboxes in sidebar

2005-02-24:
  * Integrated another sidebar fix and a build fix from Rocco Rutte.
  * Implemented feature request that the number of flagged messages is shown in the sidebar

2005-02-23: